--- a/time-vault/index.yaml
+++ b/time-vault/index.yaml
@@ -20,3 +20,9 @@ indexes:
   - name: User
   - name: Created
     direction: desc
+
+- kind: Pomodoro
+  properties:
+  - name: User
+  - name: CreatedAt
+    direction: desc
