Add tags to fields, do not store user key

--- a/time-vault/index.yaml
+++ b/time-vault/index.yaml
@@ -12,17 +12,6 @@ indexes:
 
 - kind: Pomodoro
   properties:
-  - name: User
-  - name: Created
-
-- kind: Pomodoro
-  properties:
-  - name: User
-  - name: Created
-    direction: desc
-
-- kind: Pomodoro
-  properties:
-  - name: User
-  - name: CreatedAt
+  - name: user
+  - name: createdAt
     direction: desc
