--- a/time-vault/app.yaml
+++ b/time-vault/app.yaml
@@ -7,6 +7,8 @@ handlers:
 - url: /_ah/queue/go/.*
   script: _go_app
   login: admin
+  secure: always
 
 - url: /.*
   script: _go_app
+  secure: always
