--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "^0.11.1",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sass": "~0.8.0",
